fixed an issue where the sidebar would be cut off on some devices in landscape

--- a/css/styles.css
+++ b/css/styles.css
@@ -56,6 +56,10 @@ a:hover {
     text-decoration-color: #E9B99D;
 }
 
+nav {
+    padding-bottom: 4em;
+}
+
 /* content */
 
 .container {
